[workspace]
members = [
    "packages/*",
    "contracts/core/*",
    "contracts/farms/*"
]

[profile.release.package.spectrum-protocol]
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
