[workspace]
members = [
    "packages/*",
    "contracts/cw20-legacy",
    "contracts/spectrum_*",
    "contracts/astro_farms/*",
    "contracts/disabled_farms/*",
    "contracts/farms/*",
    "contracts/gov_proxies/*"
]

[profile.release.package.spectrum-protocol]
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
