[package]
name = "spectrum-anchor-farm"
version = "0.1.0"
authors = ["Spectrum team"]
edition = "2018"
description = "Contract to stake LP token and auto collect rewards"
license = "Apache-2.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = "0.2"
cosmwasm-std = { version = "0.10.1", features = ["iterator"] }
cosmwasm-storage = { version = "0.10.1", features = ["iterator"] }
spectrum-protocol = { version = "0.1.0", path = "../../packages/spectrum_protocol" }
terraswap = "1.1.0"
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
anchor-token = { version = "1.0.0", path = "../../packages/anchor_token" }

[dev-dependencies]
cosmwasm-schema = "0.10.1"
terra-cosmwasm = "1.2.2"
