[package]
name = "spectrum-staker"
version = "0.2.0"
authors = ["Spectrum team"]
edition = "2018"
description = "Contract for staking vault"
license = "Apache-2.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = { version = "0.14.0" }
cosmwasm-std = { version = "1.0.0" }
cosmwasm-storage = { version = "1.0.0" }
spectrum-protocol = { version = "0.2.0", path = "../../packages/spectrum_protocol" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
classic_terraswap = { version = "2.7.0", default-features = false }
uint = { version = "0.9.3" }
classic-bindings = { version = "0.1.1" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0"}
