[package]
name = "astroport-generator-proxy-to-spec"
version = "1.0.0"
authors = ["Astroport"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.0.0" }
cw-storage-plus = {version = "0.14.0"}
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.24" }
cw2 = { version = "0.14.0" }
cw20 = { version = "0.14.0" }
astroport = { path = "../../packages/astroport", default-features = false }
spectrum-protocol = { version = "0.2.0", path = "../../packages/spectrum_protocol" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
