[package]
name = "spectrum-pylon-liquid-farm"
version = "0.2.0"
authors = ["Spectrum team"]
edition = "2018"
description = "Contract to auto-compound bDP Pylon liquid pool"
license = "Apache-2.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = { version = "0.8.0" }
cosmwasm-std = { version = "0.16.0" }
cosmwasm-storage = { version = "0.16.0" }
spectrum-protocol = { version = "0.2.0", path = "../../../packages/spectrum_protocol" }
terraswap = "2.4.0"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
anchor-token = { version = "0.2.0", path = "../../../packages/anchor_token" }
moneymarket = { version = "0.3.1", path = "../../../packages/anchor_moneymarket" }
pylon-gateway = { version = "0.2.0", path = "../../../packages/pylon_gateway" }

[dev-dependencies]
cosmwasm-schema = "0.16.0"
terra-cosmwasm = "2.2.0"
