[package]
name = "spectrum-anchor-gov-proxy"
version = "0.2.0"
authors = ["Spectrum Team"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = { version = "0.8.0" }
cosmwasm-std = { version = "0.16.0" }
cosmwasm-storage = { version = "0.16.0" }
spectrum-protocol = { version = "0.2.0", path = "../../../packages/spectrum_protocol" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
anchor-token = { version = "0.2.0", path = "../../../packages/anchor_token" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
